--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.0.0",
-    "jquery.mousewheel": "~3.1.12",
+    "jquery-mousewheel": "~3.1.12",
 	"jquery": ">= 2.1.3"	
   }  
 }
